--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
