--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash-es": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-animejs": "^0.5.4",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
